feat: update environment variables, enhance README, and add Swagger documentation for institutions API

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Environment
 NODE_ENV=development
+
+# Server
 PORT=3001
 
 # Database
-DATABASE_URL="postgresql://usuario:senha@localhost:5432/upnext?schema=public"
+DATABASE_URL="file:./dev.db"
 
 # CORS
 FRONTEND_URL=http://localhost:3000
